== 0.2.0

* Enhancements
  * Dashboard with quick applicant statistics added
  * Applicant page restructured
    * General Information
    * Contact Information
    * Education Information
    * Predoc and Postdoc section (general)
    * Trainee section
    * Administrative section
  * Applicants
    * List of applicants now utilizes a frozen header row
    * Added marital status
    * Add submitted at timestamp
    * Applicant Number renamed to CV Number

== 0.1.0

* Enhancements
  * Preceptors can now be managed
  * Applicants (Predoc and Postdoc) and Trainees can now be managed

== 0.0.0

* Skeleton files to initialize Rails application with testing framework and continuous integration