@@ -15,6 +15,11 @@
   </p>
 
   <p>
+    <b>Reference number:</b>
+    <%= @applicant.reference_number %>
+  </p>
+
+  <p>
     <b>Applicant type:</b>
     <%= @applicant.applicant_type %>
   </p>
