@@ -14,6 +14,7 @@
     * Added marital status
     * Add submitted at timestamp
     * Applicant Number renamed to CV Number
+    * Reference number is now generated for each application
 
 == 0.1.0
 
